<resources>
    <string name="app_name">Movee</string>
    <string name="title_home">Movies</string>
    <string name="title_tv">Tv / Web Series</string>
    <string name="title_popular">Popular</string>
    <string name="todo">TODO</string>
    <string name="trending_in_1">Trending in # 1</string>
    <string name="rating_4_0">Rating: 4.0</string>
    <string name="trending_in_top">Trending</string>
    <string name="latest_movies">Latest Movies</string>
    <string name="all_time_favorite">All Time Favorite</string>
    <string name="popular">Popular</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="actor_name">Actor Name</string>
    <string name="latest_shows">Latest Shows</string>
    <string name="movie_title">Movie Title</string>
    <string name="login_with_google">Login With Google</string>
</resources>